trying to fix logo width on mobile

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -65,17 +65,9 @@ span{
         font-size: 3rem;
     }
 }
-#mac {
-height: 500px;
-}
 
 #navbar {
   padding: .5rem 5rem 2.5rem 1rem;
-}
-
-#laptop {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
 }
 
 .Typewriter__wrapper {
@@ -111,5 +103,16 @@ li {
 @media (max-width: 995px) {
     #polaroid {
         max-width: 360px;
+    }
+}
+
+@media (max-width: 450px) {
+    #logo {
+        max-width: 400px
+    }
+}
+@media (max-width: 400px) {
+    #logo {
+        max-width: 350px
     }
 }
